# CollegePractices

./: CMakeLists.txt  Makefile  README.md  build.sh  some_
Source/: main.cpp  mb.cpp  recursion.cpp
Source/wrapper/: base_wrapper.hpp  win_wrapper.hpp  wrapper.hpp
Source/wrapper/file/: file_wrapper.cpp  file_wrapper.hpp
Source/wrapper/linux/: linux_wrapper.cpp
Source/wrapper/posix/: posixwrapper.cpp  posixwrapper.hpp
Source/wrapper/string/: wrappedstring.cpp  wrappedstring.hpp
Source/wrapper/win/: win_wrapper.hpp
